RESOLVED FIXED159988
Pausing autoplayed media should not remove all restrictions for that media element
https://bugs.webkit.org/show_bug.cgi?id=159988
Summary Pausing autoplayed media should not remove all restrictions for that media el...
Wenson Hsieh
Reported 2016-07-20 15:19:27 PDT
LayoutTests/media/controls-drag-timebar.html intermittently times out
Attachments
Patch (1.63 KB, patch)
2016-07-20 15:24 PDT, Wenson Hsieh
jonlee: review+
Wenson Hsieh
Comment 1 2016-07-20 15:24:18 PDT
Jeremy Jones
Comment 2 2016-07-20 15:28:51 PDT
Comment on attachment 284154 [details] Patch Patch looks good. But I don't understand how it will prevent intermittent time-outs of from missing canplaythrough events.
Jeremy Jones
Comment 3 2016-07-20 15:34:51 PDT
Maybe retitle this bug for the behavior change and also include radar number. If this does fix the time-out, then dup that against this change once you know that is the case.
Wenson Hsieh
Comment 4 2016-07-20 15:57:07 PDT
Note You need to log in before you can comment on or make changes to this bug.