Pausing autoplayed media should not remove all restrictions for that media element https://bugs.webkit.org/show_bug.cgi?id=159988

Reviewed by Jon Lee.

Localizes the removal of behavior restrictions introduced in r203464 upon pausing an
autoplaying video to just affect the hiding or showing of the media controller. This
prevents pages from using Javascript to start playing autoplaying videos that have
been paused by the user.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::pause):

Canonical link: https://commits.webkit.org/178150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203473 268f45cc-cd09-0410-ab3c-d52691b4dbfc